# pdca-kit

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SUPPORT.md  pdca-driven.md  pdca-driven.zh.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent_request.yml  bug_report.yml  config.yml  extension_submission.yml  feature_request.yml  preset_submission.yml
.github/workflows/: RELEASE-PROCESS.md  add-community-extension.lock.yml  add-community-extension.md  add-community-preset.lock.yml  add-community-preset.md  catalog-assign.yml  codeql.yml  docs.yml  lint.yml  release-trigger.yml  release.yml  stale.yml  test.yml
docs/: README.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md  upgrade.md  user-guide.md
docs/community/: extensions.md  friends.md  overview.md  presets.md  walkthroughs.md
docs/install/: air-gapped.md  one-time.md  pipx.md  uv.md
docs/reference/: authentication.md  core.md  extensions.md  integrations.md  overview.md  presets.md  (+1 more)
extensions/: EXTENSION-API-REFERENCE.md  EXTENSION-DEVELOPMENT-GUIDE.md  EXTENSION-PUBLISHING-GUIDE.md  EXTENSION-USER-GUIDE.md  README.md  RFC-EXTENSION-SYSTEM.md  catalog.community.json  catalog.json
integrations/: CONTRIBUTING.md  README.md  catalog.community.json  catalog.json
presets/: ARCHITECTURE.md  PUBLISHING.md  README.md  catalog.community.json  catalog.json
templates/: checklist-template.md  plan-template.md  tasks-template.md  vscode-settings.json
tests/: __init__.py  auth_helpers.py  conftest.py  test_agent_config_consistency.py  test_agents.py  test_assets.py  test_authentication.py  test_branch_numbering.py  test_catalogs.py  test_check_prerequisites_paths_only.py  test_check_tool.py  test_cli_version.py  test_commands_init.py  test_commands_package.py  test_console.py  test_console_imports.py  test_extension_registration.py  test_extension_skills.py  test_extension_update_hardening.py  test_extensions.py  test_github_http.py  test_integration_runtime.py  test_merge.py  test_presets.py  test_registrar_path_traversal.py  test_setup_plan_feature_json.py  test_setup_plan_no_overwrite.py  test_setup_tasks.py  test_shared_infra.py  test_timestamp_branches.py  test_upgrade.py  test_utils.py  test_utils_assets_imports.py  test_version_imports.py  test_workflows.py
workflows/: ARCHITECTURE.md  PUBLISHING.md  README.md  catalog.json
(+157 files in other folders)
