[project]
name = "pdca-cli"
version = "0.1.0.dev0"
description = "PDCA CLI, part of PDCA Kit. A tool to bootstrap your projects for Plan-Do-Check-Act (PDCA) development."
requires-python = ">=3.11"
dependencies = [
    "typer>=0.24.0",
    "click>=8.2.1",
    "rich",
    "platformdirs",
    "readchar",
    "pyyaml>=6.0",
    "packaging>=23.0",
    "pathspec>=0.12.0",
    "json5>=0.13.0",
]

[project.scripts]
pdca = "pdca_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdca_cli"]

[tool.hatch.build.targets.wheel.force-include]
# Bundle core assets so `pdca init` works without network access (air-gapped / enterprise)
# Page templates (exclude commands/ — bundled separately below to avoid duplication)
"templates/checklist-template.md" = "pdca_cli/core_pack/templates/checklist-template.md"
"templates/constitution-template.md" = "pdca_cli/core_pack/templates/constitution-template.md"
"templates/plan-template.md" = "pdca_cli/core_pack/templates/plan-template.md"
"templates/spec-template.md" = "pdca_cli/core_pack/templates/spec-template.md"
"templates/tasks-template.md" = "pdca_cli/core_pack/templates/tasks-template.md"
"templates/vscode-settings.json" = "pdca_cli/core_pack/templates/vscode-settings.json"
# Command templates
"templates/commands" = "pdca_cli/core_pack/commands"
"scripts/bash" = "pdca_cli/core_pack/scripts/bash"
"scripts/powershell" = "pdca_cli/core_pack/scripts/powershell"
# Bundled extensions (installable via `pdca extension add <name>`)
"extensions/git" = "pdca_cli/core_pack/extensions/git"
"extensions/agent-context" = "pdca_cli/core_pack/extensions/agent-context"
# Bundled workflows (auto-installed during `pdca init`)
"workflows/pdca" = "pdca_cli/core_pack/workflows/pdca"
# Bundled presets (installable via `pdca preset add <name>` or `pdca init --preset <name>`)
"presets/lean" = "pdca_cli/core_pack/presets/lean"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

